--- a/app/globals.css
+++ b/app/globals.css
@@ -101,7 +101,7 @@
   }
   50% {
     transform: none;
-    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    animation-timing-function: cubic-bezier(0, 0, 1.1, 1);
   }
 }
 .animate-rotate {
@@ -120,4 +120,13 @@
 
 .animate-cursor {
   animation: cursor 1s infinite steps(1, end);
+}
+
+@keyframes puls {
+  50% {
+    opacity: 0.9;
+  }
+}
+.animate-puls {
+  animation: puls 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
